docs/am/4.10/guides/resources.md
---
description: Resources define reusable configuration sets in Access Management 4.10. Compare the resource types and follow the steps to create one.
---

# Resources

## Overview

Resources provide a way to define reusable configuration sets.

## Resource types

Gravitee AM currently supports the following resources:

* HTTP Factor
* Infobip 2FA
* SMTP
* Twilio Verify
* SFR DMC API
* Orange Contact everyone

Click on the tabs below to learn more.

{% tabs %}
{% tab title="HTTP Factor" %}
The HTTP Factor resource uses HTTP requests to send and verify a generated, one time code. It supports Gravitee Expression Language (EL) to configure the resource properties.

<figure><img src="../../4.10/.gitbook/assets/resource_http 2.png" alt="An empty HTTP Factor resource configuration with the resource name, base URL, and the Send Verification Code endpoint, HTTP method, and headers." width="563"><figcaption><p>Configure an HTTP Factor resource</p></figcaption></figure>

To configure an HTTP Factor resource, you must specify:

* **Resource name:** Create a resource name
* **Base URL:** Enter the base URL to which to send a request. This field supports Gravitee Expression Language.
* **Send Verification Code**
  * **Endpoint:** Enter the resource path. This value will be appended to the base URL, must start with a '/', and supports EL.
  * **HTTP Method:** Select the HTTP method used to call the resource. Available options are **None**, **CONNECT**, **DELETE**, **GET**, **HEAD**, **OPTIONS**, **PATCH**, **POST**, **PUT**, **TRACE**, and **OTHER**.
  * **HTTP Headers:** Enter the HTTP header **Name** and **Value** (supports EL)
  * **Request body:** Enter the HTTP request body with which to call (supports EL)
  * **Response Error Conditions (one of)**
    * **Value:** Enter the condition to be verified following the remote call (e.g., `{#response.status == 400}`). Supports EL.
    * **Exception:** Select the exception sent to the consumer if the condition is true. Available options are limited to **SendChallengeException**.
    * **Message:** Enter the error message if the condition is true (supports EL)
* **Check Verification Code**
  * **Endpoint:** Enter the resource path. This value will be appended to the base URL, must start with a '/', and supports EL.
  * **HTTP Method:** Select the HTTP method used to call the resource. Available options are **None**, **CONNECT**, **DELETE**, **GET**, **HEAD**, **OPTIONS**, **PATCH**, **POST**, **PUT**, **TRACE**, and **OTHER**.
  * **HTTP Headers:** Enter the HTTP header **Name** and **Value** (supports EL)
  * **Request body:** Enter the HTTP request body with which to call (supports EL)
  * **Response Error Conditions (one of)**
    * **Value:** Enter the condition to be verified following the remote call (e.g., `{#response.status == 400}`). Supports EL.
    * **Exception:** Select the exception sent to the consumer if the condition is true. Available options are limited to **InvalidCodeException**.
    * **Message:** Enter the error message if the condition is true (supports EL)
* **HTTP client connect timeout:** Enter the duration (ms) of the HTTP client connection timeout (default 10000 ms)
* **HTTP client max pool size:** Maximum size of the HTTP client connection pool (default 100)
* **Use system proxy:** Toggle ON or OFF
{% endtab %}

{% tab title="Infobip 2FA" %}
The Infobip 2FA resource is used to generate PINs, or passcodes, that can be delivered by SMS, voice, or email.

<figure><img src="../../4.10/.gitbook/assets/resource_infobip 2.png" alt="An empty Infobip 2FA resource configuration with the resource name, application id, message id, API key, API key prefix, and base URL fields." width="563"><figcaption><p>Configure an Infobip 2FA resource</p></figcaption></figure>

To configure an Infobip 2FA resource, you must specify:

* **Resource name:** Create a resource name
* **Application ID:** Enter the 2FA application ID
* **Message ID:** Enter the message template ID that will be sent to the phone number
* **API Key:** Enter the API key
* **API Key Prefix:** Select a value to use for the prefix of the API key. The available options are **Basic**, **App**, **IBSSO**, and **Bearer**.
* **Base URL:** Enter the base URL, including protocol (e.g., https://this-is-my-url.com)
{% endtab %}

{% tab title="SMTP" %}
SMTP is a resource you can use to send email over SMTP. Once you have created your SMTP resource, you can reference it in the [email factor configuration](multi-factor-authentication/managing-factors/email.md).

<figure><img src="../../4.10/.gitbook/assets/resource_smtp 2.png" alt="An empty SMTP resource configuration with the resource name, hostname, port 587, from address, smtp protocol, and the authentication, Start TLS, and SSL trust options." width="563"><figcaption><p>Configure an SMTP resource</p></figcaption></figure>

To configure an SMTP resource, you must specify:

* **Resource name:** Create a resource name
* **Hostname:** Enter the hostname or IP of the SMTP server
* **Port:** Enter the port of the SMTP server
* **From:** Enter the email address of the sender
* **Protocol:** Enter the protocol used to send the email
* **Authentication:** Toggle ON to use authentication
* **Start TLS:** Toggle ON to start TLS
* **SSL Trust:** Enter trusted domains. If set to an asterisk (\*), all hosts are trusted. If set to a whitespace-separated list of hosts, those hosts are trusted (e.g., smtp.gmail.com).
* **SSL Protocols:** Enter a whitespace-separated list of SSL protocols that are enabled for SSL connections (e.g., TLSv1 TLSv1.1)
{% endtab %}

{% tab title="Twilio Verify" %}
The Twilio Verify resource configures a Twilio account to use the `Twilio Verify` service for Multi-factor Authentication. Once you have created your Twilio resource, you can reference it in SMS factor configuration.

<figure><img src="../../4.10/.gitbook/assets/resource_twilio verify 2.png" alt="An empty Twilio Verify resource configuration with the resource name, verification service ID, Twilio account ID, authentication token, and a use system proxy option." width="563"><figcaption><p>Configure a Twilio Verify resource</p></figcaption></figure>

To configure a Twilio Verify resource, you must specify:

* **Resource name:** Create a resource name
* **Service ID:** Enter the Verification Service ID
* **Account ID:** Enter your Twilio account ID
* **Authentication Token:** Enter the authentication token linked to your account
* **Use system proxy:** Toggle ON or OFF
{% endtab %}

{% tab title="SFR DMC API" %}
The SFR DMC API resource is a SMS provider that you can use to send verifications codes to users during the multi-factor authentication process.

<figure><img src="../../4.10/.gitbook/assets/guide-resources-20.png" alt="An empty SFR DMC resource configuration with the resource name, service host, service id, service password, space id, OADC field, and HTTP client timeout and pool settings."><figcaption></figcaption></figure>

To configure an SRF resource, you must specify:

* **Resource name:** Create a resource name.
* **Service Host:** Enter the DMC Service URL.
* **Service ID:** Enter the Verification Service ID.
* **Server Password:** Enter the DMC Service Password.
* **Space ID:** Enter the DMC Space ID.
* (Optional) **OADC:** Enter the OADC value for the SMS channel.
* (Optional) **HTTP Client connect timeout:** Enter the timeout duration for the HTTP client in milliseconds. The default value is `1000ms`.
* (Optional) **HTTP Client idle timeout:** Enter the timeout duration for the HTTP client idle timeout in milliseconds. The default value is `1000ms`.
* (Optional) **HTTP Client max pool size:** Enter the maximum number that the pool of connections can grow to. The default value is `200`.
{% endtab %}

{% tab title="Orange Contact everyone" %}
The Orange Contact everyone resource is a SMS provider that you can use to send verifications codes to users during the multi-factor authentication process.

<figure><img src="../../4.10/.gitbook/assets/guide-resources-21.png" alt="An empty resource configuration with the required username, password, token endpoint, diffusion requests endpoint, and encoding fields flagged, above the HTTP client timeout settings and sender name."><figcaption></figcaption></figure>

To configure an Orange Contact everyone resource, you must specify:

* **Resource name:** Create a resource name.
* **Username:** Enter the username for your Orange application.&#x20;
* **Password:** Enter the Password for your Orange application.&#x20;
* **Token endpoint:** Enter the endpoint that is used to request an access token for the application. For example, `https://[SERVER_URL]/api/v1.2/oauth/token`.
* **Diffusion requests Endpoint:** Enter the endpoint that is used to send a message to the user. For example: `https://[SERVER_URL]/api/v1.2/groups/[id-group]/diffusion-requests`.
* (Optional) **HTTP Client connect timeout:** Enter the timeout duration for the HTTP client in milliseconds. The default value is 1000ms.
* (Optional) **HTTP Client idle timeout:** Enter the timeout duration for the HTTP client idle timeout in milliseconds. The default value is 1000ms.
* (Optional) **HTTP Client max pool size:** Enter the maximum number that the pool of connections can grow to. The default value is 200.
* **Encoding:** From the **Encoding** drop-down menu, select either `GSM7` or `USC2`.
* **(Optional) Sender:** Enter the name of the sender.
{% endtab %}
{% endtabs %}

## Create a new resource

1. Log in to AM Console
2. Select **Settings** from the main menu
3. From the **Resources** section, select **Services**
4. Click the plus icon at the bottom of the page
5. Select the resource type and click **Next**

<figure><img src="../../4.10/.gitbook/assets/guide-resources-130.png" alt="The New Resource wizard on the Platform step, offering Infobip 2FA, SMTP, and Twilio Verify resource types, none of them selected."><figcaption></figcaption></figure>

6. Enter the resource configuration values (see [Resource Types](resources.md#resource-types)) and click **Create.**

<figure><img src="../../4.10/.gitbook/assets/guide-resources-131.png" alt="The Settings step of the New Resource wizard for an Infobip 2FA resource, with the resource name, application id, message id, API key, and API key prefix fields."><figcaption></figcaption></figure>

7. Your resource is now available for use in AM
